3.5.0/_sources/gallery/event_handling/zoom_window.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/event_handling/zoom_window.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_event_handling_zoom_window.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_event_handling_zoom_window.py:


===========
Zoom Window
===========

This example shows how to connect events in one window, for example, a mouse
press, to another figure window.

If you click on a point in the first window, the z and y limits of the second
will be adjusted so that the center of the zoom in the second window will be
the (x, y) coordinates of the clicked point.

Note the diameter of the circles in the scatter are defined in points**2, so
their size is independent of the zoom.

.. GENERATED FROM PYTHON SOURCE LINES 16-48



.. rst-class:: sphx-glr-horizontal


    *

      .. image-sg:: /gallery/event_handling/images/sphx_glr_zoom_window_001.png
         :alt: Click to zoom
         :srcset: /gallery/event_handling/images/sphx_glr_zoom_window_001.png, /gallery/event_handling/images/sphx_glr_zoom_window_001_2_0x.png 2.0x
         :class: sphx-glr-multi-img

    *

      .. image-sg:: /gallery/event_handling/images/sphx_glr_zoom_window_002.png
         :alt: Zoom window
         :srcset: /gallery/event_handling/images/sphx_glr_zoom_window_002.png, /gallery/event_handling/images/sphx_glr_zoom_window_002_2_0x.png 2.0x
         :class: sphx-glr-multi-img





.. code-block:: default


    import matplotlib.pyplot as plt
    import numpy as np


    # Fixing random state for reproducibility
    np.random.seed(19680801)

    figsrc, axsrc = plt.subplots()
    figzoom, axzoom = plt.subplots()
    axsrc.set(xlim=(0, 1), ylim=(0, 1), autoscale_on=False,
              title='Click to zoom')
    axzoom.set(xlim=(0.45, 0.55), ylim=(0.4, 0.6), autoscale_on=False,
               title='Zoom window')

    x, y, s, c = np.random.rand(4, 200)
    s *= 200

    axsrc.scatter(x, y, s, c)
    axzoom.scatter(x, y, s, c)


    def on_press(event):
        if event.button != 1:
            return
        x, y = event.xdata, event.ydata
        axzoom.set_xlim(x - 0.1, x + 0.1)
        axzoom.set_ylim(y - 0.1, y + 0.1)
        figzoom.canvas.draw()

    figsrc.canvas.mpl_connect('button_press_event', on_press)
    plt.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.042 seconds)


.. _sphx_glr_download_gallery_event_handling_zoom_window.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: zoom_window.py <zoom_window.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: zoom_window.ipynb <zoom_window.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
